--- a/public/contact.html
+++ b/public/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Home | The Simons Uga Limited</title>
+    <title>Contact | The Simons Uga Limited</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
                     <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
                     <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
@@ -61,7 +61,7 @@
 
             <div class="section-title">
                 <h2>Contact</h2>
-                <p>Contact Us</p>
+                <p>Vanilla</p>
             </div>
         </div>
 
