--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,8 @@
       </a>
     </div>
     <div class="hero-container" data-aos="fade-up">
-      <h1 class="simonilla">The Simons Uga Limited</h1>
+      <h1 class="simonilla">The Simons U<span
+          style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">g</span>a Limited</h1>
       <img src="/img/taste-vanilla.png" width="400">
     </div>
   </section><!-- End Hero -->
