Mofified html pages

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -34,6 +34,19 @@
 
 <body>
     <!-- ======= Header ======= -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+            </div>
+            <div class="col">
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+            </div>
+            <div class="col">
+                <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
+            </div>
+        </div>
+    </div>
     <header id="header" class="fixed-top d-flex align-items-cente">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
@@ -138,64 +151,6 @@
     </section><!-- End Gallery Section -->
     <!-- ======= Footer ======= -->
     <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-info">
-                            <h3>The Simons Uga Ltd</h3>
-                            <p>
-                                Plot 445 Buzzi, Namulanda <br>
-                                Kampala Ugnda<br><br>
-                                <strong>Phone:</strong> (+256) 757 644 646<br>
-                                <strong>Email:</strong> info@thesimonsug.com<br>
-                            </p>
-                            <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Services</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Farm Products</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Exports</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Sorting</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Packaging</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Transit</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Subscribe to our newsletter today and receive live updates</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
         <div class="container">
             <div class="copyright">
                 &copy; 2022 Copyright <strong><span>The Simons Uga Limited</span></strong>. All Rights Reserved
@@ -205,10 +160,11 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-                Designed by <a href="#">erinet.com</a>
+    
             </div>
         </div>
     </footer><!-- End Footer -->
+
 
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
