--- a/public/contact.html
+++ b/public/contact.html
@@ -34,6 +34,19 @@
 
 <body>
     <!-- ======= Header ======= -->
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+            </div>
+            <div class="col">
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+            </div>
+            <div class="col">
+                <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
+            </div>
+        </div>
+    </div>
     <header id="header" class="fixed-top d-flex align-items-cente">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
@@ -66,10 +79,10 @@
 
         <div data-aos="fade-up">
             <iframe style="border:0; width: 100%; height: 350px;"
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                frameborder="0" allowfullscreen></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.787400664517!2d32.5321323147532!3d0.2255686998354269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d999fec6d54df%3A0x3e346a233003a9aa!2sThe%20Simons%20Uga%20Limited!5e0!3m2!1sen!2sug!4v1667424933154!5m2!1sen!2sug"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-
         <div class="container" data-aos="fade-up">
 
             <div class="row mt-5">
@@ -79,7 +92,7 @@
                         <div class="address">
                             <i class="bi bi-geo-alt"></i>
                             <h4>Location:</h4>
-                            <p>Plot 4445, Namulanda Buzzi</p>
+                            <p>Plot 16559 Seguku, Kajjansi Town council</p>
                         </div>
 
                         <div class="open-hours">
@@ -87,7 +100,7 @@
                             <h4>Open Hours:</h4>
                             <p>
                                 Monday-Saturday:<br>
-                                8:00 AM - 2300 PM
+                                8:00 AM - 17:00 PM
                             </p>
                         </div>
 
@@ -144,64 +157,6 @@
     </section><!-- End Contact Section -->
     <!-- ======= Footer ======= -->
     <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="footer-info">
-                            <h3>The Simons Uga Ltd</h3>
-                            <p>
-                                Plot 445 Buzzi, Namulanda <br>
-                                Kampala Ugnda<br><br>
-                                <strong>Phone:</strong> (+256) 757 644 646<br>
-                                <strong>Email:</strong> info@thesimonsug.com<br>
-                            </p>
-                            <div class="social-links mt-3">
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Services</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Farm Products</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Exports</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Sorting</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Packaging</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Transit</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Subscribe to our newsletter today and receive live updates</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
         <div class="container">
             <div class="copyright">
                 &copy; 2022 Copyright <strong><span>The Simons Uga Limited</span></strong>. All Rights Reserved
@@ -211,10 +166,11 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-                Designed by <a href="#">erinet.com</a>
+
             </div>
         </div>
     </footer><!-- End Footer -->
+
 
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
