--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,20 @@
 
 
   <!-- ======= Header ======= -->
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+      </div>
+      <div class="col">
+        <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+      </div>
+       <div class="col">
+        <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
+      </div>
+    </div>
+  </div>
+
   <header id="header" class="fixed-top d-flex align-items-cente">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
@@ -68,7 +82,7 @@
           <img src="/img/hero-bg-4.jpg" class="d-block w-100" alt="Slide 1">
         </div>
         <div class="carousel-item">
-          <img src="/img/hero-bg-5.JPG" class="d-block w-100" alt="Slide 2">
+          <img src="/img/hero-bg-5.JPG" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
           <img src="/img/hero-bg-6.jpg" class="d-block w-100" alt="Slide 3">
@@ -416,7 +430,7 @@
 
 
     <!-- ======= Chefs Section ======= -->
-    <section id="chefs" class="chefs">
+    <!-- <section id="chefs" class="chefs">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -450,70 +464,42 @@
         </div>
 
       </div>
-    </section><!-- End Chefs Section -->
+    </section>End Chefs Section
 
 
 
-  </main><!-- End #main -->
+  </main> -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="footer-top">
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
       <div class="container">
-        <div class="row">
+        <div class="copyright">
+          &copy; 2022 Copyright <strong><span>The Simons Uga Limited</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
 
-          <div class="col-lg-4 col-md-6">
-            <div class="footer-info">
-              <h3>The Simons Uga Ltd</h3>
-              <p>
-                Plot 445 Buzzi, Namulanda <br>
-              </p>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 footer-links">
-            <h4><strong>Phone:</strong> (+256) 757 644 646<br></h4>
-
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4><strong>Email:</strong> info@thesimonsug.com<br></h4>
-
-          </div>
         </div>
       </div>
-    </div>
+    </footer><!-- End Footer -->
 
-    <div class="container">
-      <div class="copyright">
-        &copy; 2022 Copyright <strong><span>The Simons Uga Limited</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
 
-      </div>
-    </div>
-  </footer><!-- End Footer -->
+    <!-- Vendor JS Files -->
+    <script src="/aos/aos.js"></script>
+    <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/glightbox/js/glightbox.min.js"></script>
+    <script src="/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="/swiper/swiper-bundle.min.js"></script>
+    <script src="/php-email-form/validate.js"></script>
 
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="/aos/aos.js"></script>
-  <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="/glightbox/js/glightbox.min.js"></script>
-  <script src="/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="/swiper/swiper-bundle.min.js"></script>
-  <script src="/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="/js/main.js"></script>
 
 </body>
 
