--- a/public/about.html
+++ b/public/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Contact | The Simons Uga Limited</title>
+    <title>About | The Simons Uga Limited</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -57,7 +57,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="./about.html">About</a></li>
+                    <li><a class="nav-link scrollto" href="about.html">About</a></li>
                     <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
                     <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
                 </ul>
@@ -72,84 +72,78 @@
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
-                <h2>Contact</h2>
-                <p>Vanilla</p>
+                <h2>Who we are</h2>
+                <p>About us</p>
+
+
             </div>
         </div>
 
-        <div data-aos="fade-up">
-            <iframe style="border:0; width: 100%; height: 350px;"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.787400664517!2d32.5321323147532!3d0.2255686998354269!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177d999fec6d54df%3A0x3e346a233003a9aa!2sThe%20Simons%20Uga%20Limited!5e0!3m2!1sen!2sug!4v1667424933154!5m2!1sen!2sug"
-                style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+
         <div class="container" data-aos="fade-up">
 
-            <div class="row mt-5">
+            <div class="row ">
+                <section id="about" class="about">
+                    <div class="container" data-aos="fade-up">
 
-                <div class="col-lg-4">
-                    <div class="info">
-                        <div class="address">
-                            <i class="bi bi-geo-alt"></i>
-                            <h4>Location:</h4>
-                            <p>Plot 16559 Seguku, Kajjansi Town council</p>
-                        </div>
+                        <div class="row">
+                            <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
+                                <div class="about-img">
+                                    <img src="/img/gallery/gallery-5.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+                                <h3>The Simons Vanilla </h3>
+                                <p class="fst-italic">
 
-                        <div class="open-hours">
-                            <i class="bi bi-clock"></i>
-                            <h4>Open Hours:</h4>
-                            <p>
-                                Monday-Saturday:<br>
-                                8:00 AM - 17:00 PM
-                            </p>
-                        </div>
+                                    Premium Quality Natural Vanilla Beans
+                                </p>
+                                <p>
+                                    The simons vanilla was created to bring fresh premium
+                                    quality Vanilla products to the market. We are direct
+                                    processors and exporters of high quality Vanilla Beans and
+                                    Vanilla Powder. Our strong ties with the local community help us
+                                    assure the finest supply and production under controlled
+                                    circumstances in accordance with desired standards. Vertical
+                                    integration and supply chain optimisation enable us to offer our
+                                    customers with consistent levels of quality for very
+                                    affordable prices.
+                                </p>
+                                <p class="product-description">
+                                    The simons uga Ltd, is a company founded in the year 2016, by Simon
+                                    Musisi. Simon grew up in an Orphanage as a vulnerable child in
+                                    Kampala -Uganda. During his childhood at the Orphanage, Simon
+                                    developed the interest of becoming a businessman in the future as he
+                                    was faced with a lot of financial challenges a young man, he predicted
+                                    according to his teachers in school that it could have been business that
+                                    would save him and his community the rath of poverty they were facing
+                                    at that time. He determined to focus all his academic life on studying and
+                                    understanding how to become a businessman.
 
-                        <div class="email">
-                            <i class="bi bi-envelope"></i>
-                            <h4>Email:</h4>
-                            <p>info@thesimonsug.com</p>
-                        </div>
+                                    When he graduated from university in 2015, with a Bachelor’s degree in
+                                    Procurement and logistics, he decided to move to Jakarta to spend a
+                                    holiday with his guardian. That was when he became inspired to start a
+                                    VANILLA business while in Indonesia. That took him six months
+                                    developing the business in Indonesia and he then decided to move his
+                                    new born business back to Kampala-Uganda as he saw it was wise to
+                                    go back home and work with his friends from the Orphanage.
 
-                        <div class="phone">
-                            <i class="bi bi-phone"></i>
-                            <h4>Call:</h4>
-                            <p>(+256) 757 644 646</p>
+                                <p>
+                                    On his Return to Uganda, Simon decided to build the business with his
+                                    main aim to help his friends from the Orphanage to go to good schools
+                                    and to create jobs for them and their community.
+                                    The company has since grown to support several farmer groups and
+                                    NON-PROFIT organisations in support of Vulnerable children.
+                                    Over the past years to date, the company offers more than 50 Jobs to
+                                    the community every season and it works with more than one thousand
+                                    farmers across Uganda.
+                                </p>
+                                </p>
+                            </div>
                         </div>
 
                     </div>
-
-                </div>
-
-                <div class="col-lg-8 mt-5 mt-lg-0">
-
-                    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                        <div class="row">
-                            <div class="col-md-6 form-group">
-                                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                                    required>
-                            </div>
-                            <div class="col-md-6 form-group mt-3 mt-md-0">
-                                <input type="email" class="form-control" name="email" id="email"
-                                    placeholder="Your Email" required>
-                            </div>
-                        </div>
-                        <div class="form-group mt-3">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                                required>
-                        </div>
-                        <div class="form-group mt-3">
-                            <textarea class="form-control" name="message" rows="8" placeholder="Message"
-                                required></textarea>
-                        </div>
-                        <div class="my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
-                        </div>
-                        <div class="text-center"><button type="submit">Send Message</button></div>
-                    </form>
-
-                </div>
+                </section><!-- End About Section -->
 
             </div>
 
