--- a/public/gallery.html
+++ b/public/gallery.html
@@ -57,7 +57,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active" href="./index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#">About</a></li>
+                    <li><a class="nav-link scrollto" href="./about.html">About</a></li>
                     <li><a class="nav-link scrollto" href="./contact.html">Contact</a></li>
                     <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
                 </ul>
