--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link active" href="./index.html">Home</a></li>
-          <li><a class="nav-link" href="#">About</a></li>
+          <li><a class="nav-link" href="./about.html">About</a></li>
           <li><a class="nav-link" href="./contact.html">Contact</a></li>
           <li><a class="nav-link" href="./gallery.html">Gallery</a></li>
         </ul>
@@ -226,7 +226,7 @@
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-4">Vanilla Powder</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Bourbon Species</a>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-5">Gourmet Species</a>
               </li>
             </ul>
           </div>
@@ -235,18 +235,18 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Bourbon Vanilla</h3>
+                    <h3>Gourmet Vanilla</h3>
 
                     <p class="product-description">
-                      Our vanilla beans, Bourbon vanilla beans from Uganda are superior, with flavor and aromatic
+                      Our vanilla beans, Gourmet vanilla beans from Uganda are superior, with flavor and aromatic
                       qualities that make Uganda
-                      vanilla beans the most popular and sought after vanilla variety. Bourbon vanilla is rich, dark and
+                      vanilla beans the most popular and sought after vanilla variety. Gourmet vanilla is rich, dark and
                       creamy with an
-                      overwhelming sweet, buttery aroma. Uganda bourbon vanilla beans are well suited for many baking
+                      overwhelming sweet, buttery aroma. Uganda Gourmet vanilla beans are well suited for many baking
                       recipes, drinks, and
                       desserts. If you are trying to decide where to buy Uganda vanilla beans for sale then look no
                       further. We know you will
-                      agree that our Bourbon Vanilla Beans from Uganda are the best in the world!
+                      agree that our Gourmet Vanilla Beans from Uganda are the best in the world!
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -257,18 +257,18 @@
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Bourbon Vanilla</h3>
+                    <h3>Gourmet Vanilla</h3>
 
                     <p class="product-description">
-                      Our vanilla beans, Bourbon vanilla beans from Uganda are superior, with flavor and aromatic
+                      Our vanilla beans, Gourmet vanilla beans from Uganda are superior, with flavor and aromatic
                       qualities that make Uganda
-                      vanilla beans the most popular and sought after vanilla variety. Bourbon vanilla is rich, dark and
+                      vanilla beans the most popular and sought after vanilla variety. Gourmet vanilla is rich, dark and
                       creamy with an
-                      overwhelming sweet, buttery aroma. Uganda bourbon vanilla beans are well suited for many baking
+                      overwhelming sweet, buttery aroma. Uganda Gourmet vanilla beans are well suited for many baking
                       recipes, drinks, and
                       desserts. If you are trying to decide where to buy Uganda vanilla beans for sale then look no
                       further. We know you will
-                      agree that our Bourbon Vanilla Beans from Uganda are the best in the world!
+                      agree that our Gourmet Vanilla Beans from Uganda are the best in the world!
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -279,18 +279,18 @@
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Bourbon Vanilla</h3>
+                    <h3>Gourmet Vanilla</h3>
 
                     <p class="product-description">
-                      Our vanilla beans, Bourbon vanilla beans from Uganda are superior, with flavor and aromatic
+                      Our vanilla beans, Gourmet vanilla beans from Uganda are superior, with flavor and aromatic
                       qualities that make Uganda
-                      vanilla beans the most popular and sought after vanilla variety. Bourbon vanilla is rich, dark and
+                      vanilla beans the most popular and sought after vanilla variety. Gourmet vanilla is rich, dark and
                       creamy with an
-                      overwhelming sweet, buttery aroma. Uganda bourbon vanilla beans are well suited for many baking
+                      overwhelming sweet, buttery aroma. Uganda Gourmet vanilla beans are well suited for many baking
                       recipes, drinks, and
                       desserts. If you are trying to decide where to buy Uganda vanilla beans for sale then look no
                       further. We know you will
-                      agree that our Bourbon Vanilla Beans from Uganda are the best in the world!
+                      agree that our Gourmet Vanilla Beans from Uganda are the best in the world!
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -301,18 +301,18 @@
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Bourbon Vanilla</h3>
+                    <h3>Gourmet Vanilla</h3>
 
                     <p class="product-description">
-                      Our vanilla beans, Bourbon vanilla beans from Uganda are superior, with flavor and aromatic
+                      Our vanilla beans, Gourmet vanilla beans from Uganda are superior, with flavor and aromatic
                       qualities that make Uganda
-                      vanilla beans the most popular and sought after vanilla variety. Bourbon vanilla is rich, dark and
+                      vanilla beans the most popular and sought after vanilla variety. Gourmet vanilla is rich, dark and
                       creamy with an
-                      overwhelming sweet, buttery aroma. Uganda bourbon vanilla beans are well suited for many baking
+                      overwhelming sweet, buttery aroma. Uganda Gourmet vanilla beans are well suited for many baking
                       recipes, drinks, and
                       desserts. If you are trying to decide where to buy Uganda vanilla beans for sale then look no
                       further. We know you will
-                      agree that our Bourbon Vanilla Beans from Uganda are the best in the world!
+                      agree that our Gourmet Vanilla Beans from Uganda are the best in the world!
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
@@ -323,18 +323,18 @@
               <div class="tab-pane" id="tab-5">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Bourbon Vanilla</h3>
+                    <h3>Gourmet Vanilla</h3>
 
                     <p class="product-description">
-                      Our vanilla beans, Bourbon vanilla beans from Uganda are superior, with flavor and aromatic
-                      qualities that make Uganda
-                      vanilla beans the most popular and sought after vanilla variety. Bourbon vanilla is rich, dark and
-                      creamy with an
-                      overwhelming sweet, buttery aroma. Uganda bourbon vanilla beans are well suited for many baking
-                      recipes, drinks, and
-                      desserts. If you are trying to decide where to buy Uganda vanilla beans for sale then look no
-                      further. We know you will
-                      agree that our Bourbon Vanilla Beans from Uganda are the best in the world!
+                      Gourmet vanilla beans from Uganda are
+                      superior, with flavor and aromatic qualities that make Uganda
+                      vanilla beans the most popular and sought after vanilla variety.
+                      Gourmet vanilla is rich, dark and creamy with an overwhelming
+                      sweet, buttery aroma. Uganda Gourmet vanilla beans are well
+                      suited for many baking recipes, drinks, and desserts. If you are
+                      trying to decide where to buy Uganda vanilla beans for sale then
+                      look no further. We know you will agree that our Gourmet Vanilla
+                      Beans from Uganda are the best in the world!
                     </p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
