Added few things

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-
+<link href="/img/favicon.ico" rel="icon">
+<link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -38,14 +39,14 @@
 
   <!-- ======= Header ======= -->
   <div class="container">
-    <div class="row">
-      <div class="col">
-        <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+    <div class="row md-12">
+      <div class="col-lg-3">
+        <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
       </div>
-      <div class="col">
-        <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+      <div class="col-lg-5">
+        <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsuga.com | psimons39@gmail.com</h5>
       </div>
-       <div class="col">
+      <div class="col-lg-4">
         <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
       </div>
     </div>
@@ -161,8 +162,11 @@
             <div class="box" data-aos="zoom-in" data-aos-delay="100">
               <span>01</span>
               <h5>GOURMET BEANS</h5>
-              <p class="product-description">Splits are extractions with mixture of both whole and split vanilla beans
-                with higher vanillin content.</p>
+              <p class="product-description">
+                gourmet vanilla beans from Uganda are
+                superior, with flavor and aromatic qualities that make Uganda
+                vanilla beans the most popular and sought after vanilla variety
+              </p>
             </div>
           </div>
 
@@ -207,7 +211,7 @@
 
         <div class="section-title">
           <h2>Vanilla</h2>
-          <p>Ugandan Bean</p>
+          <p>Ugandan Vanilla Bean</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
