--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,8 @@
 
     <!-- Favicons -->
 
-
+<link href="/img/favicon.ico" rel="icon">
+<link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -35,14 +36,14 @@
 <body>
     <!-- ======= Header ======= -->
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+        <div class="row md-12">
+            <div class="col-lg-3">
+                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
             </div>
-            <div class="col">
-                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+            <div class="col-lg-5">
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsuga.com | psimons39@gmail.com</h5>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
             </div>
         </div>
@@ -89,7 +90,9 @@
                         <div class="row">
                             <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
                                 <div class="about-img">
-                                    <img src="/img/gallery/gallery-5.jpg" alt="">
+                                    <img src="/img/company.jpg"  alt="">
+                                    <img src="/img/company-two.jpg" alt="">
+                                    <img src="/img/product.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
