--- a/public/contact.html
+++ b/public/contact.html
@@ -10,7 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-
+    <link href="/img/favicon.ico" rel="icon">
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link
@@ -35,14 +36,14 @@
 <body>
     <!-- ======= Header ======= -->
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+        <div class="row md-12">
+            <div class="col-lg-3">
+                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
             </div>
-            <div class="col">
-                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+            <div class="col-lg-5">
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsuga.com | psimons39@gmail.com</h5>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
             </div>
         </div>
