--- a/public/gallery.html
+++ b/public/gallery.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Home | The Simons Uga Limited</title>
+    <title>Gallery | The Simons Uga Limited</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-
+<link href="/img/favicon.ico" rel="icon">
+<link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link
@@ -35,14 +36,14 @@
 <body>
     <!-- ======= Header ======= -->
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi Town council</h5>
+        <div class="row md-12">
+            <div class="col-lg-3">
+                <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
             </div>
-            <div class="col">
-                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsug.com</h5>
+            <div class="col-lg-5">
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsuga.com | psimons39@gmail.com</h5>
             </div>
-            <div class="col">
+            <div class="col-lg-4">
                 <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
             </div>
         </div>
@@ -160,7 +161,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-    
+
             </div>
         </div>
     </footer><!-- End Footer -->
