modified email addresss

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
         <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
       </div>
       <div class="col-lg-5">
-        <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsuga.com | psimons39@gmail.com</h5>
+        <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonuga.com | psimons39@gmail.com</h5>
       </div>
       <div class="col-lg-4">
         <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
