--- a/public/about.html
+++ b/public/about.html
@@ -41,7 +41,7 @@
                 <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
             </div>
             <div class="col-lg-5">
-                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonsuga.com | psimons39@gmail.com</h5>
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonuga.com | psimons39@gmail.com</h5>
             </div>
             <div class="col-lg-4">
                 <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
@@ -90,6 +90,7 @@
                         <div class="row">
                             <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
                                 <div class="about-img">
+                                    Ab
                                     <img src="/img/company.jpg"  alt="">
                                     <img src="/img/company-two.jpg" alt="">
                                     <img src="/img/product.jpg" alt="">
