deleted redundant photos

--- a/public/about.html
+++ b/public/about.html
@@ -92,8 +92,8 @@
                                 <div class="about-img">
                                 
                                     <img src="/img/company.jpg"  alt="">
-                                    <!-- <img src="/img/company-two.jpg" alt="">
-                                    <img src="/img/product.jpg" alt=""> -->
+                                    <img src="/img/company-two.jpg" alt="">
+                                    <img src="/img/product.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
