--- a/public/contact.html
+++ b/public/contact.html
@@ -39,7 +39,7 @@
                 <h5 class="details"><i class="bi bi-geo-alt"></i> Plot 16559 Seguku, Kajjansi </h5>
             </div>
             <div class="col-lg-5">
-                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonuga.com | psimons39@gmail.com</h5>
+                <h5 class="details"><i class="bi bi-envelope"></i> info@thesimonuga.com | psimon39@gmail.com</h5>
             </div>
             <div class="col-lg-4">
                 <h5 class="details"><i class="bi bi-phone"></i> (+256) 757 644 646</h5>
@@ -110,7 +110,8 @@
                         <div class="email">
                             <i class="bi bi-envelope"></i>
                             <h4>Email:</h4>
-                            <p>info@thesimonsug.com</p>
+                            <p>info@thesimonsuga.com</p>
+                            <p>psimon39@gmail.com</p>
                         </div>
 
                         <div class="phone">
